--- a/index.html
+++ b/index.html
@@ -1,6 +1,27 @@
 <!DOCTYPE html>
-<html>
-<link rel="stylesheet" href="css/design.css" type="text/css">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=
+  , initial-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-<script src="js/javascript.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="css/design.css" type="text/css" />
+
+    <script src="js/javascript.js" type="text/javascript"></script>
+    <title>YouTube</title>
+  </head>
+  <body>
+    <nav class="navbar">
+      <div>
+        <img class="logo" src="assets/logo.png" alt="YouTube" />
+      </div>
+      <div>
+        <input />
+      </div>
+    </nav>
+  </body>
 </html>
