--- a/index.html
+++ b/index.html
@@ -23,5 +23,21 @@
         <input />
       </div>
     </nav>
+
+    <table>
+        <td><!-- left side -->
+          <tr><iframe width="560" height="315" src="https://www.youtube.com/embed/V74l_zS1x8E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <br>
+          </tr>
+
+          <tr> Comments  <input type="text" placeholder="Add a public comment.."> </tr>
+          <tr>  <button>cancel</button> <button> comment </button> </tr>
+          <!-- -->
+        </td>
+        <td><!-- right side -->
+          <tr><!--first sidebar vedio--></tr>
+        </td>
+    </table>
+
   </body>
 </html>
