margin nav fixed position

--- a/index.html
+++ b/index.html
@@ -41,19 +41,20 @@
       </div>
     </nav>
 
-    <table>
+    <table class="table">
       <td>
         <!-- left side -->
         <tr>
+          <div  class="curr_video">
           <iframe
-            width="560"
-            height="315"
-            src="https://www.youtube.com/embed/V74l_zS1x8E"
+              width="560"
+              height="315"
+            src="https://www.youtube.com/embed/11HAYIYp_74"
             frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
           ></iframe>
-          <br />
+          </div>
         </tr>
 
         <tr>
@@ -64,14 +65,24 @@
           <button>cancel</button>
           <button>comment</button>
         </tr>
-        <!-- -->
+        <tr>
+          <p>It is awsome!!</p>
+          <p>Incredible!!</p>
+          <p>Nice ending!!</p>
+        </tr>
       </td>
 
-      <td>
+      <td class="side_bar">
         <!-- right side -->
         <tr>
           <!--first sidebar vedio-->
-          Sidebar
+          Up next
+          <p><iframe src="https://www.youtube.com/embed/I0kVNMHo6fQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+          <p><iframe src="https://www.youtube.com/embed/I0kVNMHo6fQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+          <p><iframe src="https://www.youtube.com/embed/I0kVNMHo6fQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+          <p><iframe src="https://www.youtube.com/embed/I0kVNMHo6fQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+          <p><iframe src="https://www.youtube.com/embed/I0kVNMHo6fQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+          <p><iframe src="https://www.youtube.com/embed/I0kVNMHo6fQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
         </tr>
       </td>
     </table>
