--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=
-  , initial-scale=1.0"
-    />
+
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <link
@@ -19,72 +15,130 @@
     <link rel="stylesheet" href="css/design.css" type="text/css" />
 
     <script src="js/javascript.js" type="text/javascript"></script>
+
     <title>YouTube</title>
   </head>
   <body>
-    <!-- Nav Bar Section -->
-    <nav class="navbar">
-      <div>
-        <img class="logo" src="assets/logo.png" alt="YouTube" />
-      </div>
+    <div class="container">
+      <header>
+        <div>
+          <img class="logo" src="assets/logo.png" alt="YouTube" />
+        </div>
 
-      <div>
-        <input type="text" placeholder="Search ..." />
-        <button>Search</button>
-      </div>
+        <div>
+          <form action="">
+            <input type="text" placeholder="Search ..." />
+            <button><i class="fas fa-search"></i></button>
+          </form>
+        </div>
 
-      <div>
-        <i class="fas fa-video"></i>
-        <i class="fas fa-share-square"></i>
-        <i class="fas fa-bell"></i>
-        <i class="fas fa-user-circle"></i>
-      </div>
-    </nav>
+        <div>
+          <i class="fas fa-video"></i>
+          <i class="fas fa-share-square"></i>
+          <i class="fas fa-bell"></i>
+          <i class="fas fa-user-circle"></i>
+        </div>
+      </header>
 
-    <table class="table">
-      <td>
-        <!-- left side -->
-        <tr>
-          <div  class="curr_video">
+      <nav>
+        <!-- margin -->
+      </nav>
+
+      <main>
+        <div class="curr_video">
           <iframe
-              width="560"
-              height="315"
+            width="560"
+            height="315"
             src="https://www.youtube.com/embed/11HAYIYp_74"
             frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
           ></iframe>
-          </div>
-        </tr>
+        </div>
 
-        <tr>
-          Comments
-          <input type="text" placeholder="Add a public comment.." />
-        </tr>
-        <tr>
-          <button>cancel</button>
-          <button>comment</button>
-        </tr>
-        <tr>
-          <p>It is awsome!!</p>
-          <p>Incredible!!</p>
-          <p>Nice ending!!</p>
-        </tr>
-      </td>
+        <div>
+          <h3>Video Title!!!</h3>
+          <p>32,312 Views</p>
+        </div>
 
-      <td class="side_bar">
-        <!-- right side -->
-        <tr>
-          <!--first sidebar vedio-->
+        <hr />
+
+        <div>
+          <h4>Comments</h4>
+
+          <form action="">
+            <input
+              type="text"
+              placeholder="Add a public comment.."
+              style="width:100%; align-items: center"
+            />
+            <button>cancel</button>
+            <button>comment</button>
+          </form>
+
+          <ul>
+            <li>It is awsome!!</li>
+            <li>Incredible!!</li>
+            <li>Nice ending!!</li>
+          </ul>
+        </div>
+      </main>
+
+      <aside>
+        <!--first sidebar vedio-->
+        <h5>
           Up next
-          <p><iframe src="https://www.youtube.com/embed/I0kVNMHo6fQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-          <p><iframe src="https://www.youtube.com/embed/I0kVNMHo6fQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-          <p><iframe src="https://www.youtube.com/embed/I0kVNMHo6fQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-          <p><iframe src="https://www.youtube.com/embed/I0kVNMHo6fQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-          <p><iframe src="https://www.youtube.com/embed/I0kVNMHo6fQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-          <p><iframe src="https://www.youtube.com/embed/I0kVNMHo6fQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-        </tr>
-      </td>
-    </table>
+        </h5>
+
+        <p>
+          <iframe
+            src="https://www.youtube.com/embed/I0kVNMHo6fQ"
+            frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </p>
+        <p>
+          <iframe
+            src="https://www.youtube.com/embed/I0kVNMHo6fQ"
+            frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </p>
+        <p>
+          <iframe
+            src="https://www.youtube.com/embed/I0kVNMHo6fQ"
+            frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </p>
+        <p>
+          <iframe
+            src="https://www.youtube.com/embed/I0kVNMHo6fQ"
+            frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </p>
+        <p>
+          <iframe
+            src="https://www.youtube.com/embed/I0kVNMHo6fQ"
+            frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </p>
+        <p>
+          <iframe
+            src="https://www.youtube.com/embed/I0kVNMHo6fQ"
+            frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </p>
+      </aside>
+    </div>
   </body>
 </html>
