--- a/index.html
+++ b/index.html
@@ -19,30 +19,29 @@
     <title>YouTube</title>
   </head>
   <body>
+    <nav class="nav_bar">
+  </nav>
     <div class="container">
       <header>
-        <div>
-          <img class="logo" src="assets/logo.png" alt="YouTube" />
-        </div>
+      <div class="logo_icon">
+        <img class="logo" src="assets/logo.png" alt="YouTube" />
+      </div>
 
-        <div>
-          <form action="">
-            <input type="text" placeholder="Search ..." />
-            <button><i class="fas fa-search"></i></button>
-          </form>
-        </div>
+      <div class="search_input">
+        <form action="">
+          <input type="text" placeholder="Search ..." />
+          <button><i class="fas fa-search"></i></button>
+        </form>
+      </div>
 
-        <div>
-          <i class="fas fa-video"></i>
-          <i class="fas fa-share-square"></i>
-          <i class="fas fa-bell"></i>
-          <i class="fas fa-user-circle"></i>
-        </div>
+      <div class="icons">
+        <i class="fas fa-video"></i>
+        <i class="fas fa-share-square"></i>
+        <i class="fas fa-bell"></i>
+        <i class="fas fa-user-circle"></i>
+      </div>
       </header>
 
-      <nav>
-        <!-- margin -->
-      </nav>
 
       <main>
         <div class="curr_video">
