--- a/index.html
+++ b/index.html
@@ -90,9 +90,11 @@
           </form>
 
           <ul>
-            <li>It is awsome!!</li>
-            <li>Incredible!!</li>
-            <li>Nice ending!!</li>
+
+
+            <li><img class="header" src="http://www.mpp.govt.nz/themes/mpp/images/profile_placeholder.jpg"/> It is awsome!!<i class="fas fa-thumbs-up"></i><i class="fas fa-thumbs-down"></i></li>
+            <li><img class="header" src="http://www.mpp.govt.nz/themes/mpp/images/profile_placeholder.jpg"/>Incredible!!<i class="fas fa-thumbs-up"></i><i class="fas fa-thumbs-down"></i></li>
+            <li><img class="header" src="http://www.mpp.govt.nz/themes/mpp/images/profile_placeholder.jpg"/>Nice ending!!<i class="fas fa-thumbs-up"></i><i class="fas fa-thumbs-down"></i></li>
           </ul>
         </div>
       </main>
