--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
     />
 
     <link rel="stylesheet" href="css/design.css" type="text/css" />
-
-    <script src="js/javascript.js" type="text/javascript"></script>
-
     <title>YouTube</title>
   </head>
   <body>
@@ -35,18 +32,16 @@
         </div>
 
         <div class="icons">
-          <i class="fas fa-video"></i>
-          <i class="fas fa-share-square"></i>
-          <i class="fas fa-bell"></i>
-          <i class="fas fa-user-circle"></i>
+          <i class="icon fa-lg fas fa-video"></i>
+          <i class="icon fa-lg fas fa-share-square"></i>
+          <i class="icon fa-lg fas fa-bell"></i>
+          <i class="icon fa-lg fas fa-user-circle"></i>
         </div>
       </header>
 
       <main>
         <div class="curr_video">
-          <iframe
-            width="100%"
-            height="560px"
+          <iframe class="video_main"
             src="https://www.youtube.com/embed/11HAYIYp_74"
             frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
