add sidebar videos list

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
           <span>
             <b>Game Of Microverse</b>
           </span>
-            <p>Published on March 25, 2019</p>
-            <a href="/abc">Subscribe to the Channel!</a>
-            <a href="/d">Only in Microverse</a>
-            <p>More ...</p>
+          <p>Published on March 25, 2019</p>
+          <a href="/abc">Subscribe to the Channel!</a>
+          <a href="/d">Only in Microverse</a>
+          <p>More ...</p>
         </div>
 
         <hr />
@@ -155,9 +155,22 @@
         <p>
           Up next
         </p>
-
         <div>
-          <img src="./assets/sidbar.png" alt="" />
+          <div class="recommand-video-image">
+            <a href="https://www.youtube.com/watch?v=Yp24C28xDMc">
+              <img src="./assets/Elina.png" />
+            </a>
+          </div>
+
+          <div class="recommand-video-text">
+            <p><b>Elina Nechayeva - Der Hˆlle Rache - Mozart </b></p>
+            <p>
+              Elina Netöajeva
+            </p>
+            <p>
+              22,680 views
+            </p>
+          </div>
         </div>
       </aside>
     </div>
