font color adding side

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <div>
           <h3>How they can play piano challenge as piano major students!!</h3>
-          <p>32,312 Views</p>
+          <p class="subletter">32,312 Views</p>
         </div>
 
         <hr />
@@ -69,7 +69,7 @@
           <p>Published on March 25, 2019</p>
           <a href="/abc">Subscribe to the Channel!</a>
           <a href="/d">Only in Microverse</a>
-          <p>More ...</p>
+          <p class="subletter">More ...</p>
         </div>
 
         <hr />
@@ -101,9 +101,9 @@
                   It is awsome!! Lorem ipsum dolor sit amet consectetur
                   adipisicing elit. Ratione, officiis dolorum.
                 </p>
-                <i class="fas icon-comment fa-thumbs-up"></i> 5
-                <i class="fas icon-comment fa-thumbs-down"></i> 3
-                <span class="icon-comment"> Reply </span>
+                <i class="subletter fas icon-comment fa-thumbs-up"></i> 5
+                <i class="subletter fas icon-comment fa-thumbs-down"></i> 3
+                <span class="subletter icon-comment"> Reply </span>
               </div>
             </li>
 
@@ -121,9 +121,9 @@
                   It is very fast!! Lorem ipsum dolor sit amet consectetur
                   adipisicing elit. Ratione, officiis dolorum.
                 </p>
-                <i class="fas icon-comment fa-thumbs-up"></i> 5
-                <i class="fas icon-comment fa-thumbs-down"></i> 3
-                <span class="icon-comment"> Reply </span>
+                <i class="subletter fas icon-comment fa-thumbs-up"></i> 5
+                <i class="subletter fas icon-comment fa-thumbs-down"></i> 3
+                <span class="subletter icon-comment"> Reply </span>
               </div>
             </li>
 
@@ -141,9 +141,9 @@
                   It is Incredible!! Lorem ipsum dolor sit amet consectetur
                   adipisicing elit. Ratione, officiis dolorum.
                 </p>
-                <i class="fas icon-comment fa-thumbs-up"></i> 5
-                <i class="fas icon-comment fa-thumbs-down"></i> 3
-                <span class="icon-comment"> Reply </span>
+                <i class="subletter fas icon-comment fa-thumbs-up"></i> 5
+                <i class="subletter fas icon-comment fa-thumbs-down"></i> 3
+                <span class="subletter icon-comment"> Reply </span>
               </div>
             </li>
           </ul>
@@ -155,23 +155,32 @@
         <p>
           Up next
         </p>
-        <div>
-          <div class="recommand-video-image">
-            <a href="https://www.youtube.com/watch?v=Yp24C28xDMc">
-              <img src="./assets/Elina.png" />
-            </a>
-          </div>
+        <ul>
+            <div>
+              <div class="recommand-video-image">
+                <a href="https://www.youtube.com/watch?v=Yp24C28xDMc">
+                  <img src="./assets/Elina.png" />
+                </a>
+              </div>
+              <div class="recommand-video-text">
+                <p><b>Elina Nechayeva - Der Hˆlle Rache - Mozart </b></p>
+                <p class="subletter">Elina Netöajeva</p>
+                <p class="subletter">22,680 views</p>
+              </div>
+            </div>
 
-          <div class="recommand-video-text">
-            <p><b>Elina Nechayeva - Der Hˆlle Rache - Mozart </b></p>
-            <p>
-              Elina Netöajeva
-            </p>
-            <p>
-              22,680 views
-            </p>
-          </div>
-        </div>
+            <div>
+              <div class="recommand-video-image">
+                <a href="https://www.youtube.com/watch?v=aNMlq-hOIoc">
+                  <img src="./assets/Sungjin.png" />
+                </a>
+              </div>
+              <div class="recommand-video-text">
+                <p><b>Seong-jin Cho / Rachmaninoff:Piano Concerto No. 2 in C minor, OP. 18 (12DEC.2018) </b></p>
+                <p class="subletter">Ren yu</p>
+                <p class="subletter">614,417 views</p>
+              </div>
+            </div>
       </aside>
     </div>
   </body>
