finish sidbar & update comment setions

--- a/index.html
+++ b/index.html
@@ -55,21 +55,23 @@
 
         <hr />
 
-        <div id="author">
-          <span>
+        <div class="author-container">
+          <div class="comment-image">
             <img
               class="comment-user-photo"
               src="http://www.mpp.govt.nz/themes/mpp/images/profile_placeholder.jpg"
               alt="author"
             />
-          </span>
-          <span>
+          </div>
+
+          <div class="comment-text">
             <b>Game Of Microverse</b>
-          </span>
-          <p>Published on March 25, 2019</p>
-          <a href="/abc">Subscribe to the Channel!</a>
-          <a href="/d">Only in Microverse</a>
-          <p class="subletter">More ...</p>
+
+            <p>Published on March 25, 2019</p>
+            <a href="/abc">Subscribe to the Channel!</a>
+            <a href="/d">Only in Microverse</a>
+            <p class="subletter">More ...</p>
+          </div>
         </div>
 
         <hr />
@@ -155,32 +157,104 @@
         <p>
           Up next
         </p>
-        <ul>
-            <div>
-              <div class="recommand-video-image">
-                <a href="https://www.youtube.com/watch?v=Yp24C28xDMc">
-                  <img src="./assets/Elina.png" />
-                </a>
-              </div>
-              <div class="recommand-video-text">
-                <p><b>Elina Nechayeva - Der Hˆlle Rache - Mozart </b></p>
-                <p class="subletter">Elina Netöajeva</p>
-                <p class="subletter">22,680 views</p>
-              </div>
+        <div class="recommand-grid-containter">
+          <div class="recommadn-grid-item">
+            <div class="recommand-video-image">
+              <a href="https://www.youtube.com/watch?v=Yp24C28xDMc">
+                <img src="./assets/Elina.png" />
+              </a>
             </div>
+            <div class="recommand-video-text">
+              <p><b>Elina Nechayeva - Der Hˆlle Rache - Mozart </b></p>
+              <p class="subletter">Elina Netöajeva</p>
+              <p class="subletter">22,680 views</p>
+            </div>
+          </div>
 
-            <div>
-              <div class="recommand-video-image">
-                <a href="https://www.youtube.com/watch?v=aNMlq-hOIoc">
-                  <img src="./assets/Sungjin.png" />
-                </a>
-              </div>
-              <div class="recommand-video-text">
-                <p><b>Seong-jin Cho / Rachmaninoff:Piano Concerto No. 2 in C minor, OP. 18 (12DEC.2018) </b></p>
-                <p class="subletter">Ren yu</p>
-                <p class="subletter">614,417 views</p>
-              </div>
+          <hr />
+
+          <div class="recommadn-grid-item">
+            <div class="recommand-video-image">
+              <a href="https://www.youtube.com/watch?v=aNMlq-hOIoc">
+                <img src="./assets/Sungjin.png" />
+              </a>
             </div>
+            <div class="recommand-video-text">
+              <p>
+                <b>
+                  Seong-jin Cho / Rachmaninoff:Piano Concerto No. 2 in C minor,
+                  OP. 18 (12DEC.2018)
+                </b>
+              </p>
+              <p class="subletter">Ren yu</p>
+              <p class="subletter">614,417 views</p>
+            </div>
+          </div>
+
+          <div class="recommadn-grid-item">
+            <div class="recommand-video-image">
+              <a href="https://www.youtube.com/watch?v=Hpi0Lvu1INo">
+                <img src="./assets/Yuja.png" />
+              </a>
+            </div>
+            <div class="recommand-video-text">
+              <p>
+                <b>Yuja Wang plays Scriabin's Sonata No.2 (2013, Japan) </b>
+              </p>
+              <p class="subletter">pseudopoison</p>
+              <p class="subletter">1,344 views</p>
+            </div>
+          </div>
+
+          <div class="recommadn-grid-item">
+            <div class="recommand-video-image">
+              <a href="https://www.youtube.com/watch?v=vU-MLVL8tMw">
+                <img src="./assets/Yeouleom.png" />
+              </a>
+            </div>
+            <div class="recommand-video-text">
+              <p>
+                <b>Chopin nocturne op27-2(Yeol Eum Son) </b>
+              </p>
+              <p class="subletter">Classical forest</p>
+              <p class="subletter">781,620 views</p>
+            </div>
+          </div>
+
+          <div class="recommadn-grid-item">
+            <div class="recommand-video-image">
+              <a href="https://www.youtube.com/watch?v=abdUjh6yo8E">
+                <img src="./assets/Yuja2.png" />
+              </a>
+            </div>
+            <div class="recommand-video-text">
+              <p>
+                <b>
+                  Yuja Wang plays Tritsch-Tratsch Polka
+                </b>
+              </p>
+              <p class="subletter">MrOsomatsu</p>
+              <p class="subletter">483,619 views</p>
+            </div>
+          </div>
+
+          <div class="recommadn-grid-item">
+            <div class="recommand-video-image">
+              <a href="https://www.youtube.com/watch?v=PbIX8zY17Z4">
+                <img src="./assets/Yev.png" />
+              </a>
+            </div>
+            <div class="recommand-video-text">
+              <p>
+                <b>
+                  Evgeny Kissin plays Rachmaninoff's Piano Concert No. 2
+                </b>
+              </p>
+              <p class="subletter">Frank-Dieter Tannenweber</p>
+              <p class="subletter">1,466,954 views</p>
+            </div>
+          </div>
+        </div>
       </aside>
     </div>
   </body>
