grid wider input box

--- a/index.html
+++ b/index.html
@@ -103,8 +103,10 @@
                   It is awsome!! Lorem ipsum dolor sit amet consectetur
                   adipisicing elit. Ratione, officiis dolorum.
                 </p>
-                <i class="subletter fas icon-comment fa-thumbs-up"></i> 5
-                <i class="subletter fas icon-comment fa-thumbs-down"></i> 3
+                <i class="subletter fas icon-comment fa-thumbs-up"></i>
+                <span class="subletter"> 50 </span>
+                <i class="subletter fas icon-comment fa-thumbs-down"></i>
+                <span class="subletter"> 1 </span>
                 <span class="subletter icon-comment"> Reply </span>
               </div>
             </li>
@@ -123,8 +125,10 @@
                   It is very fast!! Lorem ipsum dolor sit amet consectetur
                   adipisicing elit. Ratione, officiis dolorum.
                 </p>
-                <i class="subletter fas icon-comment fa-thumbs-up"></i> 5
-                <i class="subletter fas icon-comment fa-thumbs-down"></i> 3
+                <i class="subletter fas icon-comment fa-thumbs-up"></i>
+                <span class="subletter"> 20 </span>
+                <i class="subletter fas icon-comment fa-thumbs-down"></i>
+                <span class="subletter"> 2 </span>
                 <span class="subletter icon-comment"> Reply </span>
               </div>
             </li>
@@ -143,8 +147,10 @@
                   It is Incredible!! Lorem ipsum dolor sit amet consectetur
                   adipisicing elit. Ratione, officiis dolorum.
                 </p>
-                <i class="subletter fas icon-comment fa-thumbs-up"></i> 5
-                <i class="subletter fas icon-comment fa-thumbs-down"></i> 3
+                <i class="subletter fas icon-comment fa-thumbs-up"></i>
+                <span class="subletter"> 15 </span>
+                <i class="subletter fas icon-comment fa-thumbs-down"></i>
+                <span class="subletter"> 3 </span>
                 <span class="subletter icon-comment"> Reply </span>
               </div>
             </li>
