update search input & Logo position

--- a/index.html
+++ b/index.html
@@ -18,14 +18,19 @@
   <body>
     <div class="container">
       <header>
-        <div class="logo_icon">
+        <div class="icon">
           <img class="logo" src="assets/logo.png" alt="YouTube" />
         </div>
 
-        <div class="search_input">
-          <form action="">
-            <input type="text" placeholder="Search ..." size="80" />
-            <button><i class="fas fa-search"></i></button>
+        <div>
+          <form>
+            <input
+              class="search_input"
+              type="text"
+              placeholder="Search ..."
+              size="80"
+            />
+            <button> <i class="fas fa-2x fa-search"></i> </button>
           </form>
         </div>
 
@@ -80,7 +85,7 @@
           <h4>Comments</h4>
           <form>
             <input
-              id="comment-input"
+              class="input"
               type="text"
               placeholder="Add a public comment.."
             />
