--- a/index.html
+++ b/index.html
@@ -55,7 +55,14 @@
 
         <div>
           <h3>How they can play piano challenge as piano major students!!</h3>
-          <p class="subletter">32,312 Views</p>
+          <p class="subletter">
+            <span>32,312 Views</span>
+            <span><img src="./assets/thumb_up_icon"/>9.2K</span>
+            <span><img src="./assets/thumb_down_icon"/>123</span>
+            <span><img src="./assets/share_icon"/>SHARE</span>
+            <span><img src="./assets/save_icon"/>SAVE</span>
+            <span><img src="./assets/list_icon"/></span>
+          </p>
         </div>
 
         <hr />
