--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               placeholder="Search ..."
               size="80"
             />
-            <button> <i class="fas fa-2x fa-search"></i> </button>
+            <button> <i class="search_button fg-lg fas fa-search"></i> </button>
           </form>
         </div>
 
@@ -57,11 +57,12 @@
           <h3>How they can play piano challenge as piano major students!!</h3>
           <p class="subletter">
             <span>32,312 Views</span>
-            <span><img src="./assets/thumb_up_icon"/>9.2K</span>
-            <span><img src="./assets/thumb_down_icon"/>123</span>
-            <span><img src="./assets/share_icon"/>SHARE</span>
-            <span><img src="./assets/save_icon"/>SAVE</span>
-            <span><img src="./assets/list_icon"/></span>
+
+            <span class="icons_m"><img class="icon_m" src="./assets/thumb_up_icon.png"/>9.2K
+            <img class="icon_m" src="./assets/thumb_down_icon.png"/>123
+            <img class="icon_m" src="./assets/share_icon.png"/>SHARE
+            <img class="icon_m" src="./assets/save_icon.png"/>SAVE
+            <img class="icon_m" src="./assets/list_icon.png"/></span>
           </p>
         </div>
 
@@ -83,6 +84,7 @@
             <a href="/abc">Subscribe to the Channel!</a>
             <a href="/d">Only in Microverse</a>
             <p class="subletter">More ...</p>
+            <img src="assets/subscribe_icon.png" />
           </div>
         </div>
 
