--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
           ></iframe>
         </div>
 
-        <div>
-          <h3>How they can play piano challenge as piano major students!!</h3>
+        <div class="view">
+          <h3>What is challengeable music for piano major students!!</h3>
           <p class="subletter">
             <span>32,312 Views</span>
 
@@ -68,22 +68,22 @@
 
         <hr />
 
-        <div class="author-container">
-          <div class="comment-image">
+        <div class="author">
+          <div class="image">
             <img
-              class="comment-user-photo"
+              class="user-photo"
               src="http://www.mpp.govt.nz/themes/mpp/images/profile_placeholder.jpg"
               alt="author"
             />
           </div>
 
-          <div class="comment-text">
+          <div class="text">
             <b>Game Of Microverse</b>
-
-            <p>Published on March 25, 2019</p>
-            <a href="/abc">Subscribe to the Channel!</a>
-            <a href="/d">Only in Microverse</a>
+            <p class="subletter">Published on March 25, 2019</p>
+            <p>The slow music is also quiet challengeable! </p>
             <p class="subletter">More ...</p>
+          </div>
+          <div class="subscribe">
             <img src="assets/subscribe_icon.png" />
           </div>
         </div>
@@ -102,17 +102,18 @@
             <button>comment</button>
           </form>
 
-          <ul>
-            <li>
-              <span>
+          <div class="comments_others">
+            <div class="grid_2">
+              <div class="image">
                 <img
-                  class="comment-user-photo"
+                  class="user-photo"
                   src="http://www.mpp.govt.nz/themes/mpp/images/profile_placeholder.jpg"
                 />
-              </span>
+              </div>
+              <div class="text">
               <span>User1</span>
 
-              <div class="comment-text">
+              <div class="text">
                 <p>
                   It is awsome!! Lorem ipsum dolor sit amet consectetur
                   adipisicing elit. Ratione, officiis dolorum.
@@ -123,53 +124,10 @@
                 <span class="subletter"> 1 </span>
                 <span class="subletter icon-comment"> Reply </span>
               </div>
-            </li>
-
-            <li>
-              <span>
-                <img
-                  class="comment-user-photo"
-                  src="http://www.mpp.govt.nz/themes/mpp/images/profile_placeholder.jpg"
-                />
-              </span>
-              <span>User2</span>
-
-              <div class="comment-text">
-                <p>
-                  It is very fast!! Lorem ipsum dolor sit amet consectetur
-                  adipisicing elit. Ratione, officiis dolorum.
-                </p>
-                <i class="subletter fas icon-comment fa-thumbs-up"></i>
-                <span class="subletter"> 20 </span>
-                <i class="subletter fas icon-comment fa-thumbs-down"></i>
-                <span class="subletter"> 2 </span>
-                <span class="subletter icon-comment"> Reply </span>
-              </div>
-            </li>
-
-            <li>
-              <span>
-                <img
-                  class="comment-user-photo"
-                  src="http://www.mpp.govt.nz/themes/mpp/images/profile_placeholder.jpg"
-                />
-              </span>
-              <span>User3</span>
-
-              <div class="comment-text">
-                <p>
-                  It is Incredible!! Lorem ipsum dolor sit amet consectetur
-                  adipisicing elit. Ratione, officiis dolorum.
-                </p>
-                <i class="subletter fas icon-comment fa-thumbs-up"></i>
-                <span class="subletter"> 15 </span>
-                <i class="subletter fas icon-comment fa-thumbs-down"></i>
-                <span class="subletter"> 3 </span>
-                <span class="subletter icon-comment"> Reply </span>
-              </div>
-            </li>
-          </ul>
+            </div>
+          </div>
         </div>
+      </div><!--comments-->
       </main>
 
       <aside>
